Suggested optimizations by Idea.